css/styles.css
/* 
  ┌─────────────────────────────────────────────────────────────────────────┐
  │ cylconeReset pressStart                                                 │
  └─────────────────────────────────────────────────────────────────────────┘
 */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}


/* Set core viewport defaults */
body {
  font-family: var(--ff-body);
  margin: 0;
  overflow-x: hidden;
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Prevents textarea resizing */
textarea {
  resize: none;
}

a {
  display: inline-block;
  color: var(--clr-body-accent-nature-green);
  text-decoration: none;
  transition: all 100ms ease-in;
}

button {
  background-color: transparent;
  border: none;
  font-family: inherit;
  padding: 0;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

@font-face {
  font-family: 'Gosha Sans Bold';
  src: url('../assets/fonts/GoshaSansBold.otf');
}

@font-face {
  font-family: 'Gosha Sans Regular';
  src: url('../assets/fonts/GoshaSansRegular.otf');
}

/* 
  ┌─────────────────────────────────────────────────────────────────────────┐
  │ animations                                                              │
  └─────────────────────────────────────────────────────────────────────────┘
 */

@keyframes avatar-cyclone {
  from {
    transform: rotate(360deg) scale(1);
  }
  90% {
    transform: rotate(0) scale(0.80);
  }
  92% {
    transform: rotate(0) scale(0.85)
  }
  95% {
    transform: rotate(0) scale(0.83)
  }
  to {
    transform: rotate(0) scale(0.90)
  }
}

@keyframes cloud {
  from {
    transform: scale(1);
  }
  70% {
    transform: scale(1.2) translateX(2px);
  }
  to {
    transform: scale(1.3) translateX(3px);
  }
  
}

@keyframes cyclone-infinite {
  from {
    transform: translateY(3.3vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 0.5;
  }
  5% {
    transform: translateY(0) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 1;
  }
  10% {
    transform: translateY(3.3vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 0.5;
  }
  15% {
    transform: translateY(0) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 1;
  }
  20% {
    transform: translateY(3.3vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 0.5;
  }
  25% {
    transform: translateY(0) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 1;
  }
  30% {
    transform: translateY(3.3vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 0.5;
  }
  35% {
    transform: translateY(0) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 1;
  }
  40% {
    transform: translateY(3.3vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 0.5;
  }
  45% {
    transform: translateY(0vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 1;
  }
  50% {
    transform: translateY(1vh) translateX(0) rotateX(720deg) rotate(0) scale(1);
    opacity: 1;
  }
  55% {
    transform: translateY(1vh) translateX(18vw) rotateX(720deg) rotate(360deg)  scale(1);
    opacity: 1;
  }
  60% {
    transform: translateY(1vh) translateX(-18vw) rotateX(720deg) rotate(720deg) scale(1);
    opacity: 1;
  }
  65% {
    transform: translateY(1vh) translateX(18vw) rotateX(720deg) rotate(360deg) scale(1);
    opacity: 1;
  }
  70% {
    transform: translateY(1vh) translateX(-18vw) rotateX(720deg) rotate(0deg) scale(1);
    opacity: 1;
  }
  75% {
    transform: translateY(1vh) translateX(18vw) rotateX(720deg) rotate(1080deg) scale(1);
    opacity: 1;
  }
  80% {
    transform: translateY(1vh) translateX(-18vw) rotateX(720deg) rotate(-1080deg) scale(1);
    opacity: 1;
  }
  85% {
    transform: translateY(1vh) translateX(0) rotateX(720deg) rotate(0) scale(1);
    opacity: 1;
  }
  90% {
    transform: translateY(1vh) translateX(0) rotateX(720deg) rotate(0) scale(1);
    opacity: 1;
  }
  95% {
    transform: translateY(0) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 1;
  }
  to {
    transform: translateY(3.3vh) translateX(0) rotateX(0) rotate(0) scale(0.7);
    opacity: 0.5;
  }
}

@keyframes menu-pulse-L {
  from {
    transform: scale(1.1) rotate(-3deg);
  }
  50% {
    transform: scale(1.3) rotate(0deg);
  }
  75% {
    transform: scale(1.1) rotate(3deg);
  }
  to {
    transform: scale(1) rotate(0deg);
  }
}

@keyframes menu-pulse-R {
  from {
    transform: scale(1.1) rotate(3deg);
  }
  50% {
    transform: scale(1.3) rotate(0deg);
  }
  75% {
    transform: scale(1.1) rotate(-3deg);
  }
  to {
    transform: scale(1) rotate(0deg);
  }
}

@keyframes jiggle {
  from {
    transform: scale(1);
  }
  50% {
    transform: scale(0.5);
  }
  85% {
    transform: scale(1.3);
  }
  to {
    transform: scale(1);
  }
}

@keyframes key {
  from {
    transform: translateX(0) rotate(3deg) scaleY(1);
  }
  33% {
    transform: translateX(48vw) rotate(0deg) scaleY(0.5); 
  }
  55% {
    transform: translateX(48vw) rotate(3deg) scaleY(0.5);
  }
  to {
    transform: translateX(48vw) rotateY(0) scaleY(1);
  }
}
/* ... */

